Major refactor...how did we get here